[gd_scene load_steps=18 format=3 uid="uid://bamr13qt4fqnk"]

[ext_resource type="Script" path="res://game.gd" id="1_hgoon"]
[ext_resource type="Script" path="res://GameManager.gd" id="1_vjoa7"]
[ext_resource type="PackedScene" uid="uid://7015ua2p1p02" path="res://scenes/killzone.tscn" id="2_120ec"]
[ext_resource type="Texture2D" uid="uid://drkhncwkc10xg" path="res://assets/skies/Clouds/Clouds 6 Red/1.png" id="3_8qxoq"]
[ext_resource type="Texture2D" uid="uid://d0mkxd55nypxr" path="res://assets/skies/Clouds/Clouds 6 Red/3.png" id="4_11428"]
[ext_resource type="Texture2D" uid="uid://b3hpl7rrsfbk7" path="res://assets/skies/Clouds/Clouds 6 Red/4.png" id="5_v7xim"]
[ext_resource type="Texture2D" uid="uid://cbsa3aq88y37c" path="res://assets/skies/Clouds/Clouds 6 Red/5.png" id="6_vol8v"]
[ext_resource type="PackedScene" uid="uid://m0a1trpywm50" path="res://scenes/player3.tscn" id="10_mcaex"]
[ext_resource type="PackedScene" uid="uid://bttkxsn3r5yxk" path="res://scenes/castle_lava_and_wall.tscn" id="11_5ttif"]
[ext_resource type="PackedScene" uid="uid://187dx25gdgj5" path="res://scenes/player.tscn" id="12_jha8m"]
[ext_resource type="PackedScene" uid="uid://dduj6c4acxn4j" path="res://scenes/player2.tscn" id="13_771th"]
[ext_resource type="PackedScene" uid="uid://cnw15m64m0dox" path="res://scenes/player4.tscn" id="14_4x64s"]
[ext_resource type="PackedScene" uid="uid://fjwsx18m1leh" path="res://scenes/scoreboard_and_icons.tscn" id="14_86ftd"]
[ext_resource type="PackedScene" uid="uid://byyrobuubiugt" path="res://scenes/playerdummy.tscn" id="15_jl5ur"]
[ext_resource type="PackedScene" uid="uid://cl6evpf3vt7ip" path="res://scenes/ringoutzone.tscn" id="15_kofan"]
[ext_resource type="Script" path="res://camera.gd" id="16_1117y"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_fmh2e"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_vjoa7")

[node name="main" type="Node2D" parent="."]
script = ExtResource("1_hgoon")

[node name="Killzones" type="Node" parent="main"]

[node name="BottomKillzone" parent="main/Killzones" instance=ExtResource("2_120ec")]
z_index = 1
position = Vector2(294, 320)

[node name="CollisionShape2D" type="CollisionShape2D" parent="main/Killzones/BottomKillzone"]
shape = SubResource("WorldBoundaryShape2D_fmh2e")

[node name="TopKillzone" parent="main/Killzones" instance=ExtResource("2_120ec")]
z_index = 1
position = Vector2(291, 4)
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="main/Killzones/TopKillzone"]
position = Vector2(-2, -5.07036e-06)
shape = SubResource("WorldBoundaryShape2D_fmh2e")

[node name="LeftKillzone" parent="main/Killzones" instance=ExtResource("2_120ec")]
z_index = 1
position = Vector2(42, 170)
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="main/Killzones/LeftKillzone"]
shape = SubResource("WorldBoundaryShape2D_fmh2e")

[node name="RightKillzone" parent="main/Killzones" instance=ExtResource("2_120ec")]
z_index = 1
position = Vector2(535, 173)
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="main/Killzones/RightKillzone"]
shape = SubResource("WorldBoundaryShape2D_fmh2e")

[node name="Skies" type="Node" parent="main"]

[node name="Sky" type="TextureRect" parent="main/Skies"]
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("3_8qxoq")

[node name="Sky2" type="TextureRect" parent="main/Skies"]
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("4_11428")

[node name="Sky3" type="TextureRect" parent="main/Skies"]
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("5_v7xim")

[node name="Sky4" type="TextureRect" parent="main/Skies"]
offset_right = 576.0
offset_bottom = 324.0
texture = ExtResource("6_vol8v")

[node name="player" parent="main" instance=ExtResource("12_jha8m")]
position = Vector2(150, 191)

[node name="player2" parent="main" instance=ExtResource("13_771th")]
position = Vector2(441, 194)

[node name="player3" parent="main" instance=ExtResource("10_mcaex")]
position = Vector2(246, 194)

[node name="player4" parent="main" instance=ExtResource("14_4x64s")]
position = Vector2(354, 196)

[node name="RingoutZone" parent="main" instance=ExtResource("15_kofan")]

[node name="CastleLavaAndWall" parent="main" instance=ExtResource("11_5ttif")]
position = Vector2(58, 202)

[node name="dummy" parent="main" instance=ExtResource("15_jl5ur")]
position = Vector2(199, 206)

[node name="dummy2" parent="main" instance=ExtResource("15_jl5ur")]
position = Vector2(400, 206)

[node name="dummy3" parent="main" instance=ExtResource("15_jl5ur")]
position = Vector2(489, 205)

[node name="dummy4" parent="main" instance=ExtResource("15_jl5ur")]
position = Vector2(98, 207)

[node name="Camera2D" type="Camera2D" parent="main"]
z_index = 1
position = Vector2(289, 161)
zoom = Vector2(6, 6)
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
rotation_smoothing_speed = 3.0
script = ExtResource("16_1117y")

[node name="CanvasLayer" type="CanvasLayer" parent="main"]
offset = Vector2(-600, -125)
scale = Vector2(7, 7)
transform = Transform2D(7, 1.45715e-11, -1.45715e-11, 7, -600, -125)

[node name="ScoreboardAndIcons" parent="main/CanvasLayer" instance=ExtResource("14_86ftd")]
offset_left = 141.0
offset_top = 16.0
offset_right = 141.0
offset_bottom = 16.0
